# tensor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clean.yaml  test.yaml
macros/: Cargo.toml
macros/src/: lib.rs
src/: coproduct.rs  lib.rs  module.rs  product.rs  tensor.rs  unique_coproduct.rs
src/algebra/: mod.rs  quadratic_form.rs
src/tensor/: extension.rs  macros.rs  mod.rs
