[package]
name = "tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor_macros = { path = "macros/" }


[dev-dependencies]
# tracing-subscriber = { version = "0.3.18", default-features = false, features = [
#     "fmt",
# ] }
# tracing = { version = "0.1.40", default-features = false }
log = "0.4.21"
env_logger = "0.11.3"
