[package]
name = "extensor"
version = "0.1.1"
edition = "2021"
authors = ["Colin Roberts <colin@autoparallel.xyz>"]
description = "the main extensor crate for building arbitrary valent tensors and more."
keywords = ["tensor", "algebra", "math", "macros"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
extensor-macros = { path = "macros/", version = "0.1.0" }


[dev-dependencies]
log = "0.4.21"
env_logger = "0.11.3"
