[package]
name = "extensor"
version = "0.1.1"
edition = "2021"
authors = ["Colin Roberts <colin@autoparallel.xyz>"]
description = "the main extensor crate for building arbitrary valent tensors and more."
keywords = ["tensor", "algebra", "math", "macros"]
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.80.0"
