[package]
name = "extensor-macros"
version = "0.1.0"
edition = "2021"
authors = ["Colin Roberts <colin@autoparallel.xyz>"]
description = "proc macro backend for the extensor crate."
keywords = ["tensor", "algebra", "math", "macros"]
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.81"
